Fixed mobile overflow-x

--- a/src/sass/abstracts/_base.scss
+++ b/src/sass/abstracts/_base.scss
@@ -4,7 +4,7 @@ body {
   padding: 0;
   height: 100%;
   font-family: UniversLT !important;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
